Stage-1 Task NIO (2)